gcc/testsuite/rust/rustc/ui/liveness/liveness-use-after-move.rs
#![feature(box_syntax)]

fn main() {
    let x: Box<_> = box 5;
    let y = x;
    println!("{}", *x); // { dg-error ".E0382." "" { target *-*-* } }
    y.clone();
}

